# Noh-Base-BE

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  의학용어_단어장_앱_MVP_기획서.docx
.claude/: settings.json
.claude/agents/: build-fixer.md
.claude/hooks/: stop_gate.py  verify_build.py
.claude/rules/: build-and-verify.md  firestore-data-model.md  github.md  python-style.md
app/: __init__.py  main.py
app/api/routes/: extraction.py  health.py  wordbooks.py
app/core/: config.py  firebase.py
app/models/: extraction.py  wordbook.py
app/repositories/: __init__.py  wordbooks.py
app/services/: pdf_extraction.py  wordbooks.py
docs/: api.md  architecture.md  features.md
tests/: test_extraction_route.py  test_health.py  test_pdf_extraction.py  test_wordbooks_route.py
