[project]
name = "noh-base-be"
version = "0.1.0"
description = "의학용어 단어장 학습 앱 백엔드 (FastAPI + Firebase)"
requires-python = ">=3.11,<3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "firebase-admin>=6.5",
    "python-multipart>=0.0.9",
    "pymupdf>=1.24",          # 디지털 PDF 텍스트 레이어 추출
    "httpx>=0.27",            # LLM 폴백 등 외부 호출
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
    "mypy>=1.10",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

# ---------------------------------------------------------------------------
# Ruff: 린트 + 포맷 (build/verify 게이트에서 사용)
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py311"
src = ["app", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC"]
ignore = ["B008"]  # FastAPI Depends() 기본값 패턴 허용

# ---------------------------------------------------------------------------
# mypy: 타입 검사 (build/verify 게이트에서 사용)
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.11"
files = ["app"]
ignore_missing_imports = true
warn_unused_ignores = true
no_implicit_optional = true

# ---------------------------------------------------------------------------
# pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-q"
